# DeepFilterNet

./: .flake8  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  cbindgen.toml  clippy.toml  post-release.sh  pyproject.toml  release.sh  requirements.txt  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: black_flake8.yml  build_capi.yml  build_demo.yml  build_linux_wheel.sh  build_wasm.yml  clippy_check.yml  combine-prs.yml  cross_compile.yml  publish.yml  python_lint.yml  rust_lint.yml  stale.yml  test_df.yml  test_pypi_release.yml
DeepFilterNet/: Cargo.toml  pyproject.toml  requirements.txt  requirements_dnsmos.txt  requirements_eval.txt  requirements_test.txt
DeepFilterNet/df/: __init__.py  checkpoint.py  config.py  dataloader.py  deepfilternet.py  deepfilternet2.py  deepfilternet3.py  deepfilternetmf.py  dfop.py  enhance.py  evaluation_utils.py  export.py  io.py  logger.py  loss.py  lr.py  model.py  modules.py  multiframe.py  multistagenet.py  quantize.py  sepm.py  stoi.py  test_voicebank_demand.py  train.py  utils.py  version.py  visualization.py
DeepFilterNet/df/scripts/: dnsmos.py  dnsmos_dns5.py  dnsmos_v2.py  export.py  external_usage.py  filter_dnsmos.py  fix_n_samples_hdf5.py  list_attrs_in_hdf5.py  model_summary.py  plot_lrs.py  plot_spec.py  plot_summaries.py  prepare_data.py  print_model.py  sample_from_hdf5.py  split_hdf5.py  test_df.py  test_dns_2020.py  test_noisy_dnsmos.py  test_voicebank_demand.py  trim_silence_hdf5.py
DeepFilterNet/pretrained_models/DeepFilterNet/: config.ini
DeepFilterNet/pretrained_models/DeepFilterNet2/: config.ini
DeepFilterNet/pretrained_models/DeepFilterNet2a/: config.ini
DeepFilterNet/pretrained_models/DeepFilterNet2b/: config.ini
DeepFilterNet/src/: lib.rs
DeepFilterNet/tests/: test_dflib.py
assets/: README.md  clean.hdf5  dataset.cfg  noise_flac.hdf5  noise_vorbis.hdf5
capi-demo/: README.md  enh.raw  main.c  meson.build  noisy_snr0.raw
demo/: Cargo.toml  README.md
demo/src/: capture.rs  cmap.rs  main.rs
df-tract/: Cargo.toml
df-tract/src/: main.rs
ladspa/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
ladspa/filter-chain-configs/: deepfilter-mono-source.conf  deepfilter-stereo-sink.conf
ladspa/src/: lib.rs
libDF/: Cargo.toml  wasm_build.sh
libDF/src/: agc.rs  augmentations.rs  cache.rs  capi.rs  dataloader.rs  dataset.rs  hdf5_key_cache.rs  lib.rs  logging.rs  mix_utils.rs  rng.rs  tract.rs  transforms.rs  util.rs  wasm.rs  wav_utils.rs
lv2/: Cargo.toml
pyDF/: Cargo.toml  libdf.pyi  pyproject.toml
pyDF-data/: Cargo.toml  pyproject.toml
pyDF-data/libdfdata/: __init__.py  torch_dataloader.py
pyDF-data/src/: lib.rs
pyDF/libdf/: __init__.py
pyDF/src/: lib.rs
sbatch/: setup_env.sh  train.sh
scripts/: WAcc.py  WAcc_mean.py  WAcc_whisper.py  assert_close_npz.py  build_wasm_package.sh  copy_datadir.py  demo.py  download_process_dns4.sh  get_version.sh  has_continue_file.py  live_spectrum.py  perf_df_dec.sh  perf_enc.sh  perf_erb_dec.sh  prepare_datadir.sh  read_toml.py  run_enc.sh  sbatch_test_voicebank.sh  sbatch_train.sh  set_batch_size.py  setup_env.sh  split_npz.py  test_model_tract_cli.sh  wasm_build.sh
torchDF/: README.md  model_onnx_export.py  pyproject.toml  test_torchdf.py  torch_df_offline.py  torch_df_streaming.py
