[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DeepFilterNet"
version = "0.2.5-pre"
description = "Noise supression using deep filtering"
readme = "../README.md"
authors = ["Hendrik Schröter"]
repository = "https://github.com/Rikorose/DeepFilterNet"
requires-python = ">=3.7"
keywords = ["noise reduction", "neural network"]
classifiers = [
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Utilities",
  "Programming Language :: Rust",
  "Programming Language :: Python",
]
license = "MIT"
packages = [{ include = "df" }]
# dependencies = [
#   "numpy>=1.20",
#   "loguru=0.5",
#   "appdirs=1.4",
#   "requests=2.27",
#   "deepfilterlib=2.27",
# ]

[project.dependencies]
deepfilterlib = { path = "../pyDF/" }
python = ">=3.7,<4.0"
typing_extensions = "^4.0"
numpy = ">=1.20,<2.0"
loguru = ">=0.5"
appdirs = "^1.4"
requests = "^2.27"

[project.optional-dependences]
deepfilterdataloader = { path = "../pyDF-data/", optional = true }
soundfile = "^0.10"
icecream = ">=2,<3"
pystoi = "^0.3"
pesq = "^0.0.3"
scipy = "^1"
onnxruntime = "^1.11"

[tool.poetry.extras]
train = ["deepfilterdataloader", "icecream"]
eval = ["pystoi", "pesq", "scipy"]
soundfile = ["soundfile"]
dnsmos-local = ["onnxruntime"]

[project.scripts]
deepFilter = "df.enhance:run"

[tool.poetry.dev-dependencies]
poethepoet = "^0.11"
pre-commit = "^2.17"

[tool.poe.tasks]
install-torch-cuda11 = "python -m pip install torch==1.11.0 torchaudio==0.11.0 --extra-index-url https://download.pytorch.org/whl/cu113/"
install-torch-cpu = "python -m pip install torch==1.11.0 torchaudio==0.11.0 --extra-index-url https://download.pytorch.org/whl/cpu/"

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39", "py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["df", "libdf", "libdfdata"]
