[package]
name = "df-tract"
version = "0.1.0"
authors = ["Hendrik Schröter <h.schroeter@pm.me>"]
edition = "2018"

[[bin]]
name = "df-tract"
path = "src/main.rs"

[dependencies]
tract-core = { git="https://github.com/sonos/tract/", rev="38c6728" }
tract-onnx = { git="https://github.com/sonos/tract/", rev="38c6728" }
tract-pulse = { git="https://github.com/sonos/tract/", rev="38c6728" }
tract-hir = { git="https://github.com/sonos/tract/", rev="38c6728" }
rust-ini = "^0.17"
anyhow = "1.0.40"
