[package]
name = "deep-filter-ladspa"
version = "0.3.2-pre"
authors = ["Hendrik Schröter"]
edition = "2021"
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
deep_filter = { path = "../libDF", features = ["tract", "use-jemalloc"] }
ladspa = "0.3.4"
ndarray = "^0.15"
env_logger = "0.10"
uuid = { version = "1.2.1", features = ["v4", "fast-rng"] }
log = { version = "0.4", features = ["std"] }
