[package]
name = "deep-filter-lv2"
version = "0.3.1-pre"
authors = ["Hendrik Schröter"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wmidi = "3.1.0"
deep_filter = { path = "../libDF", features = ["tract", "use-jemalloc"] }
lv2 = { version = "0.6.0", default-features = false, features = [
  "lv2-core",
  "urid",
  "lv2-urid",
  "lv2-atom",
  "lv2-state",
] }
