[package]
name = "DeepFilterDataLoader"
version = "0.3.2-pre"
authors = ["Hendrik Schröter"]
edition = "2021"
rust-version = "1.60"

[lib]
name = "libdfdata"
crate-type = ["cdylib"]
path = "src/lib.rs"

[features]
timings = ["deep_filter/timings"]

[dependencies]
deep_filter = { features = ["dataset", "vorbis", "flac"], path = "../libDF" }
pyo3 = { version = "0.17.1", default_features = true, features = [
  "extension-module",
] }
numpy = "0.17.1"
log = { version = "0.4", features = ["std"] }
crossbeam-channel = "^0.5"
ndarray = "^0.15"
