[project]
name = "DeepFilterDataLoader"
version = "0.2.4"
classifiers = [
    "Programming Language :: Rust"
]
requires-python = ">=3.7"
dependencies = ["numpy >= 1.20"]

[build-system]
requires = ["maturin>=0.11,<0.12"]
build-backend = "maturin"

[tool.maturin]
sdist-include = ["Cargo.lock"]
strip = true

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39", "py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["df", "libdf", "libdfdata"]
