[package]
name = "DeepFilterLib"
version = "0.5.3"
authors = ["Hendrik Schröter"]
edition = "2021"
rust-version = "1.60"

[lib]
name = "libdf"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
deep_filter = { path = "../libDF", default-features = false, features = [
  "tract",
  "use-jemalloc",
  "default-model",
] }

pyo3 = { version = "0.19", features = ["extension-module"]}
numpy = "0.19"
ndarray = "^0.15"
tract-core = "^0.19.4"
