[package]
name = "DeepFilterLib"
version = "0.5.7-pre"
authors = ["Hendrik Schröter"]
edition = "2021"
rust-version = "1.60"

[lib]
name = "libdf"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
deep_filter = { features = ["transforms", "logging"], path = "../libDF" }
pyo3 = { version = "0.20", features = ["extension-module"]}
numpy = "0.20"
ndarray = "^0.15"
